# notapsychai

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  stayfocused.md  stayfocused.rs
