[package]
name = "notapsychai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["clock"] }
reqwest = "0.12.12"
rustyline = { version = "15.0.0", features = ["derive"] }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
utf8path = "0.6.0"
yammer = "0.11.0"
yammer-derive = "0.1.0"
