[package]
name = "notapsychai"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "notapsychai is not a psychiatrist; more like an ai-powered human-centric SRE"
license = "Apache-2.0"
repository = "https://github.com/rescrv/notapsychai"

[dependencies]
arrrg = "0.7.0"
arrrg_derive = "0.7.0"
chrono = { version = "0.4.39", features = ["clock"] }
claudius = { version = "0.6.0", path = "../claudius" }
claudius-derive = { version = "0.2.0", path = "../claudius/derive" }
futures = "0.3.31"
getopts = "0.2.21"
reqwest = "0.12.12"
rustyline = { version = "15.0.0", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
utf8path = "0.6.0"
